<resources>
    <string name="app_name">Friends</string>
    <string name="Required">Required</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood group</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hai_friends">Hai Friends</string>
</resources>